:bug: Specify progress indicator z-index

--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -61,6 +61,7 @@
 
       @include modifier('mobile-sticky') {
         position: sticky;
+        z-index: 1;
         top: $grid-container-margin;
 
         > * {
